namespace Sonia.Domain.Enums
{
    public enum EjemplarEstado
    {
        Disponible = 1,
        Prestado = 2,
        Reservado = 3,
        Dañado = 4,
        Perdido = 5
    }
}