namespace Sonia.Domain.Enums
{
    public enum PrestamoEstado
    {
        Activo = 1,
        Devuelto = 2,
        Vencido = 3,
        Retrasado = 4
    }
}